# GitTensor

./: README.md  miner-logs.txt  miner.py  poetry.md  protocol.py  pyproject.toml  requirements.txt  setup.py  validator-logs.txt  validator.py
contrib/: CONTRIBUTING.md
gittensor/: __init__.py  protocol.py
gittensor/base/: __init__.py  miner.py  neuron.py  validator.py
gittensor/utils/: __init__.py  config.py  rad_utils.py  radicle_utils.py  uids.py
gittensor/validator_logic/: __init__.py  repo_operations.py  reward.py
neurons/: miner.py  validator.py
tests/: test_template_validator.py
