[tool.poetry]
name = "gittensor"
version = "0.1.2"
description = "Arweave mining subnet"
authors = [
    "skiran017 <skiran017@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
asyncio = "3.4.3"
bittensor = "^9.6.0"
loguru = "0.7.2"
python-dotenv = "1.0.1"
python = ">=3.10,<3.13"
pandas = "*"
requests = "^2.32.3"
torch = "^2.3.0"
wandb = "0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
